vlib/v/checker/tests/string_index_assign_error.out
vlib/v/checker/tests/string_index_assign_error.v:3:6: error: variables may be mutable but string values are always immutable
    1 | fn main() {
    2 |     mut a := 'V is great!!'
    3 |     a[0] = `R`
      |      ~~~
    4 | }
