vlib/v/checker/tests/string_index_assign_error.vv
fn main() {
	mut a := 'V is great!!'
	a[0] = `R`
}
